--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.0.0"
+    "socket.io": "^4.0.0",
+    "socket.io-client": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
